Blackpurl/src/objects/Configurations__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Accrue_Trade_Tax_Until_Unit_Sold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Filed for proper handling of the sales tax accrual on trade-ins for Australia.</description>
        <label>Accrue Trade Tax Until Unit Sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalcTax_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalcTax_Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalcTax_LineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalcTax_LineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Payment_Rounding_Factor__c</fullName>
        <description>Enables the rounding of dollar amounts on Cash Payments</description>
        <inlineHelpText>Enables the rounding of dollar amounts on Cash Payments</inlineHelpText>
        <label>Cash Payment Rounding Factor</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Id__c</fullName>
        <label>Country Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Environmental_Fee__c</fullName>
        <label>Default Environmental Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Price_Level_on_Internal_Service__c</fullName>
        <label>Default Price Level on Internal Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Sales_Tax_on_Internal_Service__c</fullName>
        <label>Default Sales Tax on Internal Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Fee__c</fullName>
        <label>Default Tax on Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Labor__c</fullName>
        <label>Default Tax on Labor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Part__c</fullName>
        <label>Default Tax on Part</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Unit__c</fullName>
        <label>Default Tax on Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Tax_on_Vendor_Product__c</fullName>
        <label>Default Tax on Vendor Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NumberOfCustomersRecordPageSize__c</fullName>
        <label>NumberOfCustomersRecordPageSize</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ordering_Tax_Rate__c</fullName>
        <label>Ordering Tax Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchMinCharLength__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Minimum characters length to initiate search for Filters and Autocomplete</description>
        <inlineHelpText>Minimum characters length to initiate search for Filters and Autocomplete</inlineHelpText>
        <label>SearchMinCharLength</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_From_Email_Id__c</fullName>
        <label>Sent From Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty_Rate__c</fullName>
        <label>Stamp Duty Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State_Id__c</fullName>
        <label>State Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <label>Tax Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Included_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Included Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Tax_Credit_Can_Not_Exceed_Unit_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Needs to ensure that the sales tax credit for the trades does not exceed the sales tax calculated on the units.</description>
        <label>Trade Tax Credit Can Not Exceed Unit Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_Tax_Expense_Category__c</fullName>
        <label>Trade Tax Expense Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Tax_Liability_Category__c</fullName>
        <label>Trade Tax Liability Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Tax_Pending_Sale_Category__c</fullName>
        <label>Trade Tax Pending Sale Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Configurations</label>
</CustomObject>